# github-streak-ai

./: .env.example  .gitignore  LICENSE  README.md  cli.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: auto_streak.yml  daily_check.yml  generate_reports.yml
config/: __init__.py  constants.py  settings.py
dashboard/: __init__.py  badges.py  generator.py
docs/: API.md  Architecture.md  Configuration.md  FAQ.md  Installation.md  Roadmap.md  Troubleshooting.md  Usage.md
logs/: progress.json  streak.md
logs/learning/: 2026-07-16.md  2026-07-17.md  2026-07-18.md  2026-07-19.md  2026-07-20.md  2026-07-21.md  2026-07-22.md  2026-07-23.md  2026-07-24.md
logs/quotes/: 2026-07-16.md  2026-07-17.md  2026-07-18.md  2026-07-19.md  2026-07-20.md  2026-07-21.md  2026-07-22.md  2026-07-23.md  2026-07-24.md
logs/reflections/: 2026-07-16.md  2026-07-17.md  2026-07-18.md  2026-07-19.md  2026-07-20.md  2026-07-21.md  2026-07-22.md  2026-07-23.md  2026-07-24.md
logs/snippets/: 2026-07-16.md  2026-07-17.md  2026-07-18.md  2026-07-19.md  2026-07-20.md  2026-07-21.md  2026-07-22.md  2026-07-23.md  2026-07-24.md
logs/tips/: 2026-07-16.md  2026-07-17.md  2026-07-18.md  2026-07-19.md  2026-07-20.md  2026-07-21.md  2026-07-22.md  2026-07-23.md  2026-07-24.md
scripts/: __init__.py  ai_client.py  content_generator.py  git_stats.py  log_manager.py  report_generator.py  streak_tracker.py
templates/: daily_log.md.j2  dashboard.md.j2  monthly_report.md.j2  weekly_report.md.j2
tests/: __init__.py  conftest.py  test_ai_client.py  test_cli.py  test_dashboard.py  test_log_manager.py  test_report_generator.py  test_streak_tracker.py
