[build-system]
requires = ["setuptools>=68.0", "wheel>=0.41.0"]
build-backend = "setuptools.build_meta"

[project]
name = "github-streak-ai"
version = "1.0.0"
description = "AI-powered GitHub Streak Manager — maintain meaningful contribution streaks through daily logging, AI summaries, and automated reporting."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
authors = [
    {name = "GitHub Streak AI", email = "streak@example.com"},
]
keywords = [
    "github",
    "streak",
    "ai",
    "productivity",
    "daily-log",
    "nvidia",
    "cli",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Documentation",
    "Topic :: Software Development :: Version Control :: Git",
    "Typing :: Typed",
]

dependencies = [
    "requests>=2.31.0",
    "typer[all]>=0.12.0",
    "rich>=13.7.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "markdown>=3.5.0",
    "gitpython>=3.1.42",
    "jinja2>=3.1.3",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
]

[project.scripts]
streak = "cli:app"

[project.urls]
Homepage = "https://github.com/yourusername/github-streak-ai"
Documentation = "https://github.com/yourusername/github-streak-ai/tree/main/docs"
Repository = "https://github.com/yourusername/github-streak-ai"
Issues = "https://github.com/yourusername/github-streak-ai/issues"

[tool.setuptools.packages.find]
include = ["config*", "scripts*", "dashboard*", "templates*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v --tb=short --strict-markers"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks integration tests requiring external services",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
